# Rootly-MCP-server

./: #Dockerfile#  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GPT4O_REVIEW.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_REPORT.md  IMPROVEMENT_PLAN.md  README 2.md  README.md  claude_desktop_config.json  gemini-extension.json  pyproject.toml  rootly_fastmcp_server.py  rootly_fastmcp_server_routemap.py  rootly_openapi.json  server.json  smithery.yaml  swagger.json  test_actual_call.py  test_incidents.py
.github/workflows/: ci.yml  lint.yml  pr-validation.yml  pypi-release.yml  test-matrix.yml  test.yml
.semaphore/: deploy-staging.yml  deploy.yml  semaphore.yml  update-ecs.sh
examples/: oncall_metrics_example.py
src/rootly_mcp_server/: __init__.py  __main__.py  client.py  code_mode.py  exceptions.py  legacy_server.py  mcp_error.py  monitoring.py  och_client.py  pagination.py  payload_stripping.py  security.py  server.py  server_defaults.py  smart_utils.py  spec_transform.py  test.json  test_client.py  transport.py  utils.py  validators.py
tests/: README.md  conftest.py  test_client.py  test_integration.py  test_server.py  test_startup.py
tests/unit/: test_alert_stripping.py  test_authentication.py  test_code_mode_module.py  test_exceptions.py  test_hosted_tool_auth.py  test_http_headers.py  test_legacy_server_module.py  test_main_transport.py  test_mcp_error_module.py  test_och_client.py  test_oncall_handoff.py  test_oncall_metrics.py  test_oncall_new_tools.py  test_oncall_severity_normalization.py  test_security.py  (+9 more)
(+9 files in other folders)
