[project]
name = "rootly-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for Rootly APIs using OpenAPI spec"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Anthropic, PBC." }]
keywords = ["rootly", "mcp", "llm", "automation", "incidents"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.1.2",           # MCP Python SDK
    "requests>=2.28.0",     # For API calls
    "pydantic>=2.0.0",      # For data validation
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rootly_mcp_server"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
rootly-mcp = "rootly_mcp_server.__main__:main"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "ruff>=0.7.3",
    "pytest>=8.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*" 